--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "test": "craco test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -r git@github.com:tangjiawen-box/tangjiawen-box.github.io.git -b main"
+    "deploy": "gh-pages -d build -r git@github.com:tangjiawen-box/tangjiawen-box.github.io.git -b main",
+    "json-server": "json-server __json_server_mock__/db.json --watch --port 3001"
+
   },
   "eslintConfig": {
     "extends": [
